--- a/hackathon13-1/Hackathon13-1/src/main/AndroidManifest.xml
+++ b/hackathon13-1/Hackathon13-1/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.kad.android.hackathon13_1.MainActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
